# cartelo

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  package.xml  workspace.packages  workspace.repos
.devcontainer/: compose.yaml  devcontainer.json
cartelo/: CMakeLists.txt
cartelo/config/: pose_teleoperation.yaml
cartelo/include/cartelo/: pose_teleoperation.hpp
cartelo/src/: pose_teleoperation.cpp
cartelo_prototype/: package.xml  setup.cfg  setup.py
cartelo_prototype/cartelo_prototype/: gripper.py  pose.py
cartelo_prototype/config/: ros2_controllers.yaml
cartelo_prototype/launch/: teleop.launch.py  vive.launch.py
config/: cartesian_bounds.yaml  gripper_teleoperation.yaml  pose_teleoperation.yaml  twist_teleoperation.yaml
include/cartelo/: cartesian_bounds.hpp  gripper_teleoperation.hpp  homing_handler.hpp  joystick_handler.hpp  pose_teleoperation.hpp  twist_teleoperation.hpp
launch/: demo_so101.launch.py  demo_so101_cartesian_controllers.launch.py  demo_so101_moveit.launch.py  demo_vive.launch.py  teleop.launch.py
scripts/: ros_aliases.sh
src/: cartesian_bounds.cpp  gripper_teleoperation.cpp  homing_handler.cpp  joystick_handler.cpp  pose_teleoperation.cpp  twist_teleoperation.cpp
